add api get regulation by id season
